<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Squirrel</string>

    <string name="Add">Add</string>
    <string name="Add_Folder">Add Folder</string>
    <string name="add_node_fragment_title">Add a new %1$s to \'%2$s\'</string>
    <string name="Add_Value">Add Value</string>
    <string name="alarm_fragment_title">Choose when you want to be reminded about \'%1$s\'</string>
    <string name="Autosave">Autosave</string>
    <string name="Characters">Characters</string>
    <string name="Clear_Alarm">Clear Alarm</string>
    <string name="Clear_Constraints">Clear Constraints</string>
    <string name="constrain_fragment_title">Constraints for \'%1$s\'</string>
    <string name="Copy_Value">Copy Value</string>
    <string name="Delete">Delete</string>
    <string name="Edit_Alarm">Edit Alarm</string>
    <string name="Edit_Constraints">Edit Constraints</string>
    <string name="Edit">Edit</string>
    <string name="edit_node_fragment_title">Edit \'%1$s\'</string>
    <string name="folder">folder</string>
    <string name="Help">Help</string>
    <string name="Hide_Values">Hide Values</string>
    <string name="Length">Length</string>
    <string name="locale_prefix">default</string>
    <string name="Name">Name</string>
    <string name="Pick_Characters">Pick Characters</string>
    <string name="pick_fragment_title">Select character positions to see the matching character</string>
    <string name="Randomise_Value">Randomise Value</string>
    <string name="remind_in">Remind in</string>
    <string name="Rename">Rename</string>
    <string name="repeat_every">Repeat every</string>
    <string name="Save">Save</string>
    <string name="Search">Search</string>
    <string name="Set_Alarm">Set Alarm</string>
    <string name="Settings">Settings</string>
    <string name="Show_time">Show time of last change</string>
    <string name="Text_Size">Text Size</string>
    <string name="Undo">Undo</string>
    <string name="value">value</string>
    <string name="Value">Value</string>
</resources>
