<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_alarm"
        android:icon="@drawable/ic_alarm"
        android:orderInCategory="10"
        android:title="@string/Edit_Alarm" />
    <item
        android:id="@+id/action_add_folder"
        android:icon="@drawable/ic_add_folder"
        android:orderInCategory="20"
        android:title="@string/Add_Folder" />
    <item
        android:id="@+id/action_add_value"
        android:icon="@drawable/ic_add_value"
        android:orderInCategory="30"
        android:title="@string/Add_Value" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="50"
        android:title="@string/Delete" />
    <item
        android:id="@+id/action_rename"
        android:orderInCategory="70"
        android:title="@string/Rename" />
</menu>