<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/SettingsScreenLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/autosave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="autosaveClicked"
            android:text="@string/Autosave" />

        <CheckBox
            android:id="@+id/hide_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="hideValuesClicked"
            android:text="@string/Hide_Values" />

        <CheckBox
            android:id="@+id/show_last_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showLastChangeClicked"
            android:text="@string/Show_time" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/Text_Size" />

        <Spinner
            android:id="@+id/text_size_spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:entries="@array/text_size_list"
            android:prompt="@string/Text_Size" />

    </LinearLayout>
</ScrollView>