<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/constraints_for"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/constrain_fragment_title"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Length"/>

        <EditText
            android:id="@+id/length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:text="@string/Length" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Characters"/>

        <EditText
            android:id="@+id/characters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textNoSuggestions"
            android:text="@string/Characters" />
    </LinearLayout>

    <Button
        android:id="@+id/clear_constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Clear_Constraints"/>

</LinearLayout>